fix(app): fix layout jumps and tweak styles

--- a/apps/next/src/global.css
+++ b/apps/next/src/global.css
@@ -87,7 +87,7 @@
 
   html,
   body {
-    @apply h-full overflow-hidden;
+    @apply h-full;
   }
 
   ::-webkit-scrollbar {
